refactor(server): move viewporter to new server model
-Migrate to server
-Split to private and public part
-Remove Binding
-Remove Interface In Name
-Change Heritage
-Add to Cmake
-Fix AutoTest
-Migrate QHash and QList to map and vector

Closes #29

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -27,7 +27,6 @@ set(SERVER_LIB_SRCS
     textinput_interface.cpp
     textinput_interface_v0.cpp
     textinput_interface_v2.cpp
-    viewporter_interface.cpp
 
     ../../server/buffer.cpp
     ../../server/linux_dmabuf_v1.cpp
@@ -66,6 +65,7 @@ set(SERVER_LIB_SRCS
     ../../server/idle_inhibit_v1.cpp
     ../../server/keyboard.cpp
     ../../server/xdgoutput.cpp
+    ../../server/viewporter.cpp
 )
 
 ecm_qt_declare_logging_category(SERVER_LIB_SRCS HEADER logging.h IDENTIFIER WRAPLAND_SERVER CATEGORY_NAME wrapland-server DEFAULT_SEVERITY Critical)
@@ -339,7 +339,6 @@ set(SERVER_LIB_HEADERS
   shadow_interface.h
   slide_interface.h
   textinput_interface.h
-  viewporter_interface.h
 
   ../../server/buffer.h
   ../../server/linux_dmabuf_v1.h
@@ -370,6 +369,7 @@ set(SERVER_LIB_HEADERS
   ../../server/idle_inhibit_v1.h
   ../../server/xdg_shell.h
   ../../server/xdg_decoration.h
+  ../../server/viewporter.h
 )
 
 install(FILES
