--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,6 +1,5 @@
 set(SERVER_LIB_SRCS
     appmenu_interface.cpp
-    blur_interface.cpp
     clientconnection.cpp
     contrast_interface.cpp
     display.cpp
@@ -65,6 +64,7 @@ set(SERVER_LIB_SRCS
     ../../server/xdgoutput.cpp
     ../../server/viewporter.cpp
     ../../server/shadow.cpp
+    ../../server/blur.cpp
 )
 
 ecm_qt_declare_logging_category(SERVER_LIB_SRCS HEADER logging.h IDENTIFIER WRAPLAND_SERVER CATEGORY_NAME wrapland-server DEFAULT_SEVERITY Critical)
@@ -314,7 +314,6 @@ install(TARGETS WraplandServer EXPORT WraplandTargets ${INSTALL_TARGETS_DEFAULT_
 set(SERVER_LIB_HEADERS
   ${CMAKE_CURRENT_BINARY_DIR}/Wrapland/Server/wraplandserver_export.h
   appmenu_interface.h
-  blur_interface.h
   clientconnection.h
   contrast_interface.h
   display.h
@@ -369,6 +368,7 @@ set(SERVER_LIB_HEADERS
   ../../server/xdg_decoration.h
   ../../server/viewporter.h
   ../../server/shadow.h
+  ../../server/blur.h
 )
 
 install(FILES
