refactor(server): remodel remote access
This moves the remote access interface to the new server objects model.

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -11,7 +11,6 @@ set(SERVER_LIB_SRCS
     output_device_v1_interface.cpp
     output_management_v1_interface.cpp
     plasmashell_interface.cpp
-    remote_access_interface.cpp
     resource.cpp
     seat_interface.cpp
     server_decoration_palette_interface.cpp
@@ -62,6 +61,7 @@ set(SERVER_LIB_SRCS
     ../../server/plasma_virtual_desktop.cpp
     ../../server/plasma_window.cpp
     ../../server/text_input_v2.cpp
+    ../../server/remote_access.cpp
 )
 
 ecm_qt_declare_logging_category(SERVER_LIB_SRCS HEADER logging.h IDENTIFIER WRAPLAND_SERVER CATEGORY_NAME wrapland-server DEFAULT_SEVERITY Critical)
@@ -315,7 +315,6 @@ set(SERVER_LIB_HEADERS
   output_device_v1_interface.h
   output_management_v1_interface.h
   plasmashell_interface.h
-  remote_access_interface.h
   resource.h
   server_decoration_palette_interface.h
 
@@ -357,6 +356,7 @@ set(SERVER_LIB_HEADERS
   ../../server/plasma_virtual_desktop.h
   ../../server/plasma_window.h
   ../../server/text_input_v2.h
+  ../../server/remote_access.h
 )
 
 install(FILES
