ci: update clang-tidy configuration
This moves the clang-tidy configuration into a separate file in the source
root directory. The script must be called from this directory and the path to
the build directory provided, otherwise it is assumed the path is `../build`.

The clang-tidy checks we want to run are selected in the configuration file.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -82,10 +82,8 @@ clang-tidy:
       artifacts: true
   script:
     - pacman -Sy python2 --noconfirm --needed
-    - SOURCE_DIR=$(pwd)
-    - cd ci-build
     # Run clang-tidy via wrapper script.
-    - bash ../ci/compliance/clang-tidy.sh
+    - bash ci/compliance/clang-tidy.sh ci-build
 
   # TODO: Remove again when decided on which checks to use.
   allow_failure: true
