--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,7 +1,6 @@
 set(SERVER_LIB_SRCS
     clientconnection.cpp
     display.cpp
-    eglstream_controller_interface.cpp
     fakeinput_interface.cpp
     global.cpp
     plasmashell_interface.cpp
@@ -60,6 +59,7 @@ set(SERVER_LIB_SRCS
     ../../server/output_configuration_v1.cpp
     ../../server/output_device_v1.cpp
     ../../server/output_management_v1.cpp
+    ../../server/eglstream_controller.cpp
 )
 
 ecm_qt_declare_logging_category(SERVER_LIB_SRCS HEADER logging.h IDENTIFIER WRAPLAND_SERVER CATEGORY_NAME wrapland-server DEFAULT_SEVERITY Critical)
@@ -303,7 +303,6 @@ set(SERVER_LIB_HEADERS
   ${CMAKE_CURRENT_BINARY_DIR}/Wrapland/Server/wraplandserver_export.h
   clientconnection.h
   display.h
-  eglstream_controller_interface.h
   fakeinput_interface.h
   global.h
   plasmashell_interface.h
@@ -354,6 +353,7 @@ set(SERVER_LIB_HEADERS
   ../../server/output_configuration_v1.h
   ../../server/output_device_v1.h
   ../../server/output_management_v1.h
+  ../../server/eglstream_controller.h
 )
 
 install(FILES
