build: move server CMake file
We move the CMake file and the only other remaining header to the toplevel
server directory and delete by that the old src/server directory.

The system header is moved into a separate directory with disabled clang-format
so that we can keep its original form without reformatting.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,60 +1,59 @@
 set(SERVER_LIB_SRCS
-    ../../server/buffer.cpp
-    ../../server/filtered_display.cpp
-    ../../server/linux_dmabuf_v1.cpp
-    ../../server/compositor.cpp
-    ../../server/region.cpp
-    ../../server/subcompositor.cpp
-    ../../server/surface.cpp
-    ../../server/xdg_decoration.cpp
-    ../../server/xdg_foreign.cpp
-    ../../server/xdg_foreign_v2.cpp
-    ../../server/xdg_shell.cpp
-    ../../server/xdg_shell_surface.cpp
-    ../../server/xdg_shell_toplevel.cpp
-    ../../server/xdg_shell_popup.cpp
-    ../../server/xdg_shell_positioner.cpp
-
-    ../../server/client.cpp
-    ../../server/data_device.cpp
-    ../../server/data_device_manager.cpp
-    ../../server/data_offer.cpp
-    ../../server/data_source.cpp
-    ../../server/display.cpp
-    ../../server/dpms.cpp
-    ../../server/output.cpp
-    ../../server/touch.cpp
-    ../../server/pointer.cpp
-    ../../server/pointer_constraints_v1.cpp
-    ../../server/pointer_gestures_v1.cpp
-    ../../server/relative_pointer_v1.cpp
-    ../../server/seat.cpp
-    ../../server/keystate.cpp
-    ../../server/wayland/buffer_manager.cpp
-    ../../server/kde_idle.cpp
-    ../../server/wayland/client.cpp
-    ../../server/wayland/display.cpp
-    ../../server/idle_inhibit_v1.cpp
-    ../../server/keyboard.cpp
-    ../../server/xdgoutput.cpp
-    ../../server/viewporter.cpp
-    ../../server/shadow.cpp
-    ../../server/slide.cpp
-    ../../server/contrast.cpp
-    ../../server/blur.cpp
-    ../../server/appmenu.cpp
-    ../../server/plasma_virtual_desktop.cpp
-    ../../server/plasma_window.cpp
-    ../../server/text_input_v2.cpp
-    ../../server/remote_access.cpp
-    ../../server/output_changeset_v1.cpp
-    ../../server/output_configuration_v1.cpp
-    ../../server/output_device_v1.cpp
-    ../../server/output_management_v1.cpp
-    ../../server/eglstream_controller.cpp
-    ../../server/fakeinput.cpp
-    ../../server/server_decoration_palette.cpp
-    ../../server/plasmashell.cpp
+    appmenu.cpp
+    blur.cpp
+    buffer.cpp
+    client.cpp
+    compositor.cpp
+    contrast.cpp
+    data_device.cpp
+    data_device_manager.cpp
+    data_offer.cpp
+    data_source.cpp
+    display.cpp
+    dpms.cpp
+    eglstream_controller.cpp
+    fakeinput.cpp
+    filtered_display.cpp
+    idle_inhibit_v1.cpp
+    kde_idle.cpp
+    keyboard.cpp
+    keystate.cpp
+    linux_dmabuf_v1.cpp
+    output.cpp
+    output_changeset_v1.cpp
+    output_configuration_v1.cpp
+    output_device_v1.cpp
+    output_management_v1.cpp
+    plasmashell.cpp
+    plasma_virtual_desktop.cpp
+    plasma_window.cpp
+    pointer.cpp
+    pointer_constraints_v1.cpp
+    pointer_gestures_v1.cpp
+    region.cpp
+    relative_pointer_v1.cpp
+    remote_access.cpp
+    seat.cpp
+    server_decoration_palette.cpp
+    shadow.cpp
+    slide.cpp
+    subcompositor.cpp
+    surface.cpp
+    text_input_v2.cpp
+    touch.cpp
+    viewporter.cpp
+    wayland/buffer_manager.cpp
+    wayland/client.cpp
+    wayland/display.cpp
+    xdg_decoration.cpp
+    xdg_foreign.cpp
+    xdg_foreign_v2.cpp
+    xdgoutput.cpp
+    xdg_shell.cpp
+    xdg_shell_surface.cpp
+    xdg_shell_toplevel.cpp
+    xdg_shell_popup.cpp
+    xdg_shell_positioner.cpp
 )
 
 ecm_qt_declare_logging_category(SERVER_LIB_SRCS HEADER logging.h IDENTIFIER WRAPLAND_SERVER CATEGORY_NAME wrapland-server DEFAULT_SEVERITY Critical)
@@ -296,55 +295,53 @@ install(TARGETS WraplandServer EXPORT WraplandTargets ${INSTALL_TARGETS_DEFAULT_
 
 set(SERVER_LIB_HEADERS
   ${CMAKE_CURRENT_BINARY_DIR}/Wrapland/Server/wraplandserver_export.h
-  ../../server/buffer.h
-  ../../server/client.h
-  ../../server/filtered_display.h
-  ../../server/linux_dmabuf_v1.h
-  ../../server/xdg_foreign.h
-  ../../server/region.h
-  ../../server/region.h
-  ../../server/surface.h
-  ../../server/compositor.h
-  ../../server/subcompositor.h
-  ../../server/kde_idle.h
-  ../../server/client.h
-  ../../server/data_device.h
-  ../../server/data_device_manager.h
-  ../../server/data_offer.h
-  ../../server/data_source.h
-  ../../server/display.h
-  ../../server/dpms.h
-  ../../server/keyboard.h
-  ../../server/touch.h
-  ../../server/keystate.h
-  ../../server/output.h
-  ../../server/pointer.h
-  ../../server/pointer_constraints_v1.h
-  ../../server/pointer_gestures_v1.h
-  ../../server/relative_pointer_v1.h
-  ../../server/seat.h
-  ../../server/xdgoutput.h
-  ../../server/idle_inhibit_v1.h
-  ../../server/xdg_shell.h
-  ../../server/xdg_decoration.h
-  ../../server/viewporter.h
-  ../../server/shadow.h
-  ../../server/slide.h
-  ../../server/contrast.h
-  ../../server/blur.h
-  ../../server/appmenu.h
-  ../../server/plasma_virtual_desktop.h
-  ../../server/plasma_window.h
-  ../../server/text_input_v2.h
-  ../../server/remote_access.h
-  ../../server/output_changeset_v1.h
-  ../../server/output_configuration_v1.h
-  ../../server/output_device_v1.h
-  ../../server/output_management_v1.h
-  ../../server/eglstream_controller.h
-  ../../server/fakeinput.h
-  ../../server/server_decoration_palette.h
-  ../../server/plasmashell.h
+  appmenu.h
+  blur.h
+  buffer.h
+  client.h
+  compositor.h
+  contrast.h
+  data_device.h
+  data_device_manager.h
+  data_offer.h
+  data_source.h
+  display.h
+  dpms.h
+  eglstream_controller.h
+  fakeinput.h
+  filtered_display.h
+  idle_inhibit_v1.h
+  kde_idle.h
+  keyboard.h
+  keystate.h
+  linux_dmabuf_v1.h
+  output.h
+  output_changeset_v1.h
+  output_configuration_v1.h
+  output_device_v1.h
+  output_management_v1.h
+  plasmashell.h
+  plasma_virtual_desktop.h
+  plasma_window.h
+  pointer.h
+  pointer_constraints_v1.h
+  pointer_gestures_v1.h
+  region.h
+  relative_pointer_v1.h
+  remote_access.h
+  seat.h
+  server_decoration_palette.h
+  shadow.h
+  slide.h
+  subcompositor.h
+  surface.h
+  text_input_v2.h
+  touch.h
+  viewporter.h
+  xdg_decoration.h
+  xdgoutput.h
+  xdg_foreign.h
+  xdg_shell.h
 )
 
 install(FILES
