--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -50,10 +50,10 @@ set(SERVER_LIB_SRCS
     xdg_foreign_v2.cpp
     xdg_output.cpp
     xdg_shell.cpp
-    xdg_shell_surface.cpp
-    xdg_shell_toplevel.cpp
     xdg_shell_popup.cpp
     xdg_shell_positioner.cpp
+    xdg_shell_surface.cpp
+    xdg_shell_toplevel.cpp
 )
 
 ecm_qt_declare_logging_category(SERVER_LIB_SRCS HEADER logging.h IDENTIFIER WRAPLAND_SERVER CATEGORY_NAME wrapland-server DEFAULT_SEVERITY Critical)
@@ -342,6 +342,9 @@ set(SERVER_LIB_HEADERS
   xdg_output.h
   xdg_foreign.h
   xdg_shell.h
+  xdg_shell_popup.h
+  xdg_shell_surface.h
+  xdg_shell_toplevel.h
 )
 
 install(FILES
