build: create internal target for in-tree external headers
Create an internal CMake target external::external that provides headers which
are in-tree but from other sources. Our exported server and client libraries
can then add the target as a build requirement. By that they can include the
headers and clang-tidy checks won't be applied to them.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -283,6 +283,7 @@ target_link_libraries(WraplandServer
         Wayland::Server
         EGL::EGL
         Qt5::Concurrent
+        external::external
 )
 
 set_target_properties(WraplandServer PROPERTIES VERSION   ${WRAPLAND_VERSION_STRING}
